[package]
name = "u8g2-fonts"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Finomnis/u8g2-fonts"
description = "A text renderer for embedded-graphics, based on u8g2."
keywords = ["no-std", "embedded"]
categories = ["no-std", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "/.gitignore",
    "/.gitmodules",
    "/.github/",
    "/regenerate_fonts_file.sh",
    "/u8g2/",
    "/TODO.txt",
    "/UPCOMING_VERSION_CHANGES.txt",
]

[dependencies]
embedded-graphics-core = "0.3.3"
