[package]
name = "u8g2-fonts"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Finomnis/u8g2-fonts"
description = "A text renderer for embedded-graphics, based on u8g2."
keywords = ["no-std", "embedded"]
categories = ["no-std", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "/.gitignore",
    "/.gitmodules",
    "/.github/",
    "/regenerate_fonts_file.sh",
    "/u8g2/",
    "/TODO.txt",
    "/UPCOMING_VERSION_CHANGES.txt",
]

[features]
# Enables std::error::Error impls
std = []
# Enables U8g2TextStyle for the embedded_graphics font interface
embedded_graphics_textstyle = ["dep:embedded-graphics"]

[dependencies]
embedded-graphics-core = "0.4.0"
embedded-graphics = { version = "0.7.1", optional = true }

[dev-dependencies]
image = "0.24.3"
base64 = "0.21.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
