[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
u8g2-fonts = { path = "../..", features = [
    "std",
    "embedded_graphics_font_integration",
] }
embedded-graphics = "0.7"
embedded-graphics-simulator = "0.3"
anyhow = "1"
