[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
u8g2-fonts = { path = "../..", features = ["embedded_graphics_textstyle"] }
embedded-graphics = "0.8.0"
embedded-graphics-simulator = "0.7.0"
anyhow = "1.0.71"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
