[package]
name = "generate_fonts_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
miette = { version = "5", features = ["fancy"] }
regex = "1"
lazy_static = "1"
