[package]
name = "generate_fonts_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
miette = { version = "5.9.0", features = ["fancy"] }
regex = "1.8.4"
lazy_static = "1.4.0"
rayon = "1.8.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
