[package]
name = "generate_fonts_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy"] }
regex = "1.11.1"
lazy_static = "1.5.0"
rayon = "1.10.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
